--- a/DevNotebooks/yaml.ipynb
+++ b/DevNotebooks/yaml.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
        "'C:\\\\Projects\\\\requirements_sandbox'"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,14 +150,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b'pages:\\n- Home: index.md\\n- About: about.md\\nsite_name: MkLorum\\n'\n"
+      "b'pages:\\n- Home: index.md\\n- Requirements: req.md\\nsite_name: Project Requirements\\n'\n"
      ]
     }
    ],
@@ -169,21 +169,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'pages': [{'Home': 'index.md'}, {'About': 'about.md'}],\n",
-       " 'site_name': 'MkLorum'}"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cfg = yaml.load(document)\n",
     "cfg"
@@ -191,11 +179,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cfg[\"site_name\"] = \"Project Requirements\""
+    "cfg[\"site_name\"] = \"Project Requirements\"\n",
+    "cfg[\"pages\"].append({\"About\": \"about.md\"})"
    ]
   },
   {
@@ -214,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,13 +220,13 @@
     "**bold**\n",
     "*italics*\n",
     "\n",
-    "$\\LaTeX$\n",
+    "$$\\LaTeX$$\n",
     "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
